[gd_scene load_steps=20 format=3 uid="uid://cl1en4lbbdffo"]

[ext_resource type="FontFile" uid="uid://sks63ere33r2" path="res://Pixelify_Sans/static/PixelifySans-Regular.ttf" id="1_spbdu"]
[ext_resource type="Script" uid="uid://cujrkruilc7qd" path="res://read.gd" id="1_vhvs7"]
[ext_resource type="Material" uid="uid://d2qdm1byirqow" path="res://shader.tres" id="2_b6fi6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhvs7"]
bg_color = Color(0.806527, 0.645324, 0.649454, 1)
border_width_left = 15
border_width_top = 60
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.807843, 0.647059, 0.65098, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s8rbo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s8rbo"]
bg_color = Color(0.682353, 0.415686, 0.466667, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_doduw"]
bg_color = Color(0.440047, 0.243258, 0.282578, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o3jhh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ciyjt"]
bg_color = Color(0.682353, 0.415686, 0.466667, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_doduw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xq2h4"]
bg_color = Color(0, 0, 0, 0.792157)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ciyjt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b6fi6"]
bg_color = Color(0.785494, 0.583224, 0.526029, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jy06v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b6fi6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xq2h4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jy06v"]
bg_color = Color(1, 1, 1, 0.0784314)
border_color = Color(1, 1, 1, 0.12549)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ugbt2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugbt2"]
bg_color = Color(0.863848, 0.585522, 0.473596, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[node name="Read" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vhvs7")

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource("2_b6fi6")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.035
anchor_top = 0.115
anchor_right = 0.965
anchor_bottom = 0.975
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.419608, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("1_spbdu")
theme_override_font_sizes/font_size = 66
theme_override_styles/normal = SubResource("StyleBoxFlat_vhvs7")
text = "HIIIIIIII HELLOOO
 HELLO"
wrap_mode = 1
autowrap_mode = 2

[node name="Save" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.809
anchor_top = 0.022
anchor_right = 0.971
anchor_bottom = 0.078
offset_left = 0.279968
offset_top = -0.240002
offset_right = 0.319946
offset_bottom = -11.76
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_spbdu")
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxEmpty_s8rbo")
theme_override_styles/hover = SubResource("StyleBoxFlat_s8rbo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_doduw")
theme_override_styles/normal = SubResource("StyleBoxFlat_s8rbo")
text = "SAVE"

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.02
anchor_right = 0.157
anchor_bottom = 0.073
offset_left = 0.2
offset_top = 3.6
offset_right = 0.439987
offset_bottom = -2.16002
theme_override_fonts/font = ExtResource("1_spbdu")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_o3jhh")
theme_override_styles/hover = SubResource("StyleBoxFlat_ciyjt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_doduw")
theme_override_styles/normal = SubResource("StyleBoxFlat_ciyjt")
text = "Go Back"

[node name="Properties" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.357
anchor_top = 0.02
anchor_right = 0.643
anchor_bottom = 0.07
offset_left = 0.439972
offset_top = 3.6
offset_right = -0.440002
offset_bottom = 3.60001
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_spbdu")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_doduw")
theme_override_styles/hover = SubResource("StyleBoxFlat_ciyjt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_doduw")
theme_override_styles/normal = SubResource("StyleBoxFlat_ciyjt")
text = "Properties"

[node name="Background2" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xq2h4")

[node name="backgroundexitbutton" type="Button" parent="Background2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ciyjt")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ciyjt")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ciyjt")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ciyjt")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ciyjt")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ciyjt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ciyjt")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ciyjt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ciyjt")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ciyjt")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ciyjt")

[node name="SettingContainer" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b6fi6")

[node name="ItemList" type="ItemList" parent="SettingContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/guide_color = Color(0.492709, 0.258911, 0.0862561, 0.529412)
theme_override_colors/font_selected_color = Color(0.619608, 0.27451, 0.247059, 1)
theme_override_colors/font_color = Color(0.61951, 0.27527, 0.24865, 1)
theme_override_fonts/font = ExtResource("1_spbdu")
theme_override_font_sizes/font_size = 81
theme_override_styles/focus = SubResource("StyleBoxEmpty_jy06v")
theme_override_styles/panel = SubResource("StyleBoxEmpty_b6fi6")
theme_override_styles/hovered = SubResource("StyleBoxEmpty_xq2h4")
theme_override_styles/hovered_selected = SubResource("StyleBoxEmpty_xq2h4")
theme_override_styles/hovered_selected_focus = SubResource("StyleBoxFlat_jy06v")
theme_override_styles/selected = SubResource("StyleBoxEmpty_ugbt2")
theme_override_styles/selected_focus = SubResource("StyleBoxEmpty_ugbt2")
theme_override_styles/cursor_unfocused = SubResource("StyleBoxEmpty_ugbt2")
theme_override_styles/cursor = SubResource("StyleBoxEmpty_ugbt2")
item_count = 3
item_0/text = "Font Size"
item_1/text = "Font Color"
item_2/text = "Background"

[node name="Changer" type="Panel" parent="."]
custom_minimum_size = Vector2(21.62, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.3
anchor_right = 0.9
anchor_bottom = 0.7
offset_left = 1830.0
offset_top = 15.0
offset_right = 1830.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ugbt2")

[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Properties" to="." method="_on_properties_pressed"]
[connection signal="item_selected" from="SettingContainer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="mouse_exited" from="Changer" to="." method="_on_changer_mouse_exited"]
